# qat-rpc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  cla.json  contributor_license_agreement.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  cla-assistant.yaml  publish.yml
src/QAT_RPC/qat_rpc/utils/: constants.py  metrics.py
src/QAT_RPC/qat_rpc/zmq/: qat_commands.py  receiver.py  wrappers.py
src/qat_rpc/: __init__.py  handler.py  metrics.py  models.py
src/qat_rpc/zmq/: __init__.py  _base.py  client.py  client_cli.py  qat_commands.py  receiver.py  server.py  wrappers.py
src/tests/integration/: test_zmq.py
src/tests/unit/: test_models.py  test_version.py
src/tests/unit/zmq/: test_client.py  test_server.py
src/tests/utils/: test_metric_exporter.py
src/tests/zmq/: test_wrappers.py
tests/: __init__.py
tests/integration/: test_zmq.py
tests/integration/program_data/: basic.bc
tests/unit/: test_metrics.py  test_models.py  test_version.py
tests/unit/zmq/: test_base.py  test_client.py  test_client_cli.py  test_server.py
