[project]
name = "qat-rpc"
version = "0.6.0"
description = "RPC tooling for OQC QAT."
authors = [
    { name = "Kajsa Eriksson Rosenqvist", email = "keriksson.rosenqvist@oqc.tech" },
    { name = "Kyle Hutchings", email = "khutchings@oqc.tech" },
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic>=2.9.0,<3.0.0",
    "prometheus-client>=0.20.0",
    "pyzmq>=26.1.0",
    "qat-compiler>=3.0.0,<4.0.0",
]

[project.scripts]
qat_comexe = "qat_rpc.zmq.qat_commands:qat_run"

[tool.poetry]
packages = [
    { include = "qat_rpc", from = "src/" }
]

[tool.poetry.group.dev.dependencies]
bandit = ">=1.8.0"
coverage = ">=7.0.0"
deptry = ">=0.23.0"
import-linter = ">=2.0"
pip-audit = ">=2.10.0"
pip-licenses = ">=5.0.0"
poethepoet = ">=0.36.0"
pyright = { extras = ["nodejs"], version = ">=1.1.402" }
pytest = ">=8.0.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.14.0"
ruff = ">=0.12.0"

# Pinned minimum versions to avoid known vulnerabilities in dev dependencies
filelock = ">=3.20.3"
pip = ">=26.0"
virtualenv = ">=20.36.1"

[tool.ruff]
line-length = 92
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "TRY", "FAST"]
ignore = ["TRY003"] # Requires refactor of exception handling which is out of scope for now

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
exclude = ["**/.venv", "**/__pycache__", "**/tests"]
ignore = ["src/qat_rpc/metrics.py"]  # TODO: Fix type errors as part of metrics refactor
pythonPlatform = "Linux"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.deptry]
extend_exclude = ["src/tests"]
known_first_party = ["qat_rpc"]

[tool.deptry.per_rule_ignores]
DEP002 = ["certifi", "cryptography", "idna", "jinja2", "pillow", "setuptools", "urllib3"]
DEP003 = ["compiler_config"]

[tool.pip-licenses]
ignore-packages = [
  "docutils",
  "psycopg2",
  "qat-rpc"
]
fail-on = "GNU General Public License (GPL);GNU Library or Lesser General Public License (LGPL)"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
